--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -642,6 +642,7 @@ input, select, textarea {
 		.image img {
 			border-radius: 4px;
 			display: block;
+			max-width: 100%;
 		}
 
 		.image.left, .image.right {
